<resources>
    <string name="app_name" translatable="false">Base Project</string>
    <string name="build_time">v%1$s Build Time: %2$s</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="preview">Preview</string>
    <string name="firebase">Firebase</string>
    <string name="post">Posts</string>
    <string name="lists">Lists</string>
    <string name="list">List</string>
    <string name="images">Images</string>
    <string name="image">Images</string>
    <string name="choose_language">Choose your preferred language</string>
    <string name="english_bangla">English / বাংলা</string>
    <string name="google_login">Login with Google</string>
    <string name="english">English</string>
    <string name="bangla">Bangla</string>
    <string name="choose_an_option">Choose an option</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_text">Enter Text</string>
    <string name="add_image">Add Image</string>
    <string name="task_canceled">Task Cancelled</string>
    <string name="take_photo">Take Photo</string>
    <string name="browse_gallery">Browse Gallery</string>
    <string name="text_missing">Text is missing</string>
    <string name="image_missing">Image is missing</string>
    <string name="api_default_error">Something went wrong!</string>
    <string name="http_unauthorized">Unauthorised User</string>
    <string name="http_forbidden">Forbidden</string>
    <string name="http_internal_error">Internal Server Error</string>
    <string name="http_bad_request">Bad Request</string>
    <string name="http_no_internet">No Internet Connection</string>
    <string name="http_json_exception">Something Went Wrong API is not responding properly!</string>
    <string name="http_socket_timeout">Server connection timeout</string>
    <string name="http_unknown_host">Unable to connect with server</string>
</resources>